--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <p>ik ben anouschka. en ik probeer wat html, echt heel erg hip oid.
     ik heb nognooit iets met html gedaan maar lijkt me wel grappig
     </p>
-
+<p>een nieuwe regel lalala</p>
     </body>
     <img src="img_chania.jpg" alt="Flowers in Chania">
 
